# fb-payment-service

./: .env.example  Cargo.toml  Dockerfile  main.tf
.github/actions/: setup.yml
.github/workflows/: ci.yml
src/: main.rs
src/handlers/: create_customer.rs  create_product.rs  mod.rs
src/utils/: stripe.rs
src/validations/: mod.rs  validate_mobile.rs
