[package]
name = "fb-payment-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-stripe = { version = "0.22.2", features = ["runtime-tokio-hyper"] }
dotenv = "0.15.0"
actix-cors = "0.6.4"
awc = "3.1.1"
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.19"
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
